--- a/client/nav.html
+++ b/client/nav.html
@@ -3,12 +3,12 @@
   <div id="m_menu" class="ui floating sidebar vertical menu inverted">
        {{#if currentUser}}
           <span class="item" >
-            <img alt="UserAccounts" width="50" height="50" src="/imgs/create_thumb.png">
+            <img alt="UserAccounts" width="150" height="150" src="/imgs/logo.png">
           </span>
         <a class="header item" href="/logedIn"> JobCrawler</a>
         {{else}}
           <span class="item" >
-            <img alt="UserAccounts" width="50" height="50" src="/imgs/create_thumb.png">
+            <img alt="UserAccounts" width="150" height="150" src="/imgs/logo.png">
           </span>
         <a class="header item" href="/"> JobCrawler</a>
         {{/if}}
@@ -36,16 +36,16 @@
 
     <div id="header">
         <div id="mainHead"> 
-            <div id="menu" class="ui inverted menu">
+            <div id="menu" class="ui massive inverted menu">
 
                 {{#if currentUser}}
                     <span class="item" >
-                        <img alt="UserAccounts" width="50" height="50" src="/imgs/create_thumb.png">
+                        <img class="large" alt="UserAccounts" src="/imgs/logo.png">
                     </span>
                     <a class="header item" href="/logedIn"> JobCrawler</a>
                     {{else}}
                     <span class="item" >
-                        <img alt="UserAccounts" width="50" height="50" src="/imgs/create_thumb.png">
+                        <img class="large" alt="UserAccounts"  src="/imgs/logo.png">
                     </span>
                     <a class="header item" href="/"> JobCrawler</a>
                 {{/if}}
