--- a/client/signIn.html
+++ b/client/signIn.html
@@ -1,10 +1,10 @@
 <template name="signInPage">
 
-<div class="container">	
+<div class="main_page_container">	
 	<div class="ui center aligned two column grid">
 		<div class="column">
 		
-				{{> atForm}}
+				{{> myAtForm}}
 			
 		</div>
 	</div>
