--- a/client/signUpPage.html
+++ b/client/signUpPage.html
@@ -1,11 +1,11 @@
 <template name="signUpPage">
 	
 	
-<div class="container">	
+<div class="main_page_container">	
 	<div class="ui center aligned two column grid">
 		<div class="column">
 		
-				{{> atForm state='signUp'}}
+				{{> myAtForm state='signUp'}}
 			
 		</div>
 	</div>
