--- a/client/addJob.html
+++ b/client/addJob.html
@@ -1,5 +1,5 @@
 <template name="basic">
-  {{> wizard id="basic" route="basic" steps=steps stepsTemplate="steps_semanticUI" buttonClasses="ui button"}}
+  {{> wizard id="basic" route="basic" steps=steps stepsTemplate="steps_semanticUI" buttonClasses="ui button" }}
 
 </template>
 
@@ -8,15 +8,17 @@
 <template name="categories">
 	
 {{#autoForm id="categories-form" doc=step.data schema=step.schema}}
-<fieldset>
+<div class="addJobForm">
 	<form class="ui form">
 		<div class="field">
 			<p></p>
-	    	{{> afQuickField  name='category' type='select' }}  	
+	    	{{> afQuickField  name='category' type='select' class='addJobFormFields'}}  	
 		</div>
 	</form>
-</fieldset>
-	{{> wizardButtons}} 
+	<div class="spacing"></div>
+	 {{> wizardButtons}} 
+</div>
+	
 
 
 {{/autoForm}}
@@ -27,7 +29,7 @@
 
 
   {{#autoForm id="details-form" doc=step.data schema=step.schema}}
-	<fieldset>
+	<fieldset class="addJobForm">
 	    <form class="ui form">
 		    <legend>Add a Job</legend>
 		    <div class="field">
@@ -43,9 +45,10 @@
 		    	{{> afQuickField name='urgency' type='select' }}  	
 			</div>	
 		</form>
+		 {{> wizardButtons}} 
 	</fieldset>
 
-	{{> wizardButtons}} 
+	
 {{/autoForm}}
 
 
@@ -57,7 +60,7 @@
 <!-- 
     {{> afQuickField name="acceptTerms"}} -->
 
-    <fieldset>
+    <fieldset class="addJobForm">
     <form class="ui form">
 			<div class="field">
 		     	<p></p>
@@ -70,9 +73,10 @@
  				{{> afQuickField name='phone' rows=1 placeholder='"We ask for your phone number because most tradespeople will give you a call to arrange a quote."'}}
 		     </div>
 	</form>
+		 {{> wizardButtons}} 
 </fieldset>
 
-    {{> wizardButtons}} 
+   
 
   {{/autoForm}}
 </template>
@@ -81,4 +85,32 @@
   <p>Thanks for your order {{name}}.</p>
 
   <a href="/" class="ui button">Place another order</a>
+</template>
+
+
+
+
+<template name="steps_semanticUI">
+ 
+  <div class="maincontainer ">
+    
+      <div class="ui three steps addJobFormSteps">
+          {{#each wizard.steps}}
+            <div class="{{stepClass id}} step">
+              {{#if icon}}<i class="info icon"></i>{{/if}}
+              <div class="content">
+              {{#if wizard.route}}
+                <a href="{{pathForStep id}}" class="title">{{title}}</a>
+              {{else}}
+                <div class="title">{{title}}</div>
+              {{/if}}
+              </div>
+            </div>
+          {{/each}}
+          </div>
+    
+  </div> 
+
+
+
 </template>
