--- a/client/enrolledJobs.html
+++ b/client/enrolledJobs.html
@@ -16,9 +16,9 @@
 						<div class="meta bottom attached right floated"><a href="/jobDetails/{{_id}}">View Details</a></div>	
 				</div>
 				<div class="extra content">
-					<div class="ui top button attached">
-						<div cclass="ui negative basic button toggleisApplied"> Cancel Job </div>
-					</div>
+					
+						<div class="ui top button attached toggleisApplied"> Cancel Job </div>
+					
 				</div>
 			</div>
 		{{else}}
