--- a/client/main.html
+++ b/client/main.html
@@ -5,6 +5,9 @@
   
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">
+<!-- <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOronufACD2bgiBIhOZBGETSsn78xXgkk&callback=initMap">
+    </script> -->
 </head>
 
 <body>
