--- a/client/jobDetails.html
+++ b/client/jobDetails.html
@@ -16,7 +16,7 @@
          
          <div class="ui segment">
           <h2>Location</h2>
-          <p><div id="address">{{job.location}}</div></p>
+          <div id="address">{{job.location}}</div>
           <h2>Description</h2>
           <p>{{job.description}}</p>
           <h2>Contact information</h2>
